# o-

./: .gitignore  CHANGELOG.md  Cargo.toml  LOCKFILE_GUIDE.md  PACKAGE_MANAGER_GUIDE.md  README.md  REGISTRY_DOWNLOAD_GUIDE.md  codex-resume.zsh  index.js  latest-codex.zsh  output.html  release-plz.toml
.github/workflows/: release-plz.yml
core/: CHANGELOG.md  Cargo.toml
core/src/: engine.rs  error.rs
jstd/: CHANGELOG.md  Cargo.toml
jstd/src/: buffer.rs  console.rs  events.rs  fs.rs  lib.rs  path.rs  process.rs  timers.rs
scripts/: package_toolchain_release.py
src/: app_error.rs  args.rs  binengine.rs  conf.rs  job.rs  lib.rs  lock.rs  main.rs  pm.rs  report.rs  toolchain.rs  x.rs
test-project/: index.js  package-lock.json  package.json
toolchains/javascriptcore/: CHANGELOG.md  Cargo.toml
toolchains/javascriptcore/src/: lib.rs  main.rs
toolchains/spidermonkey/: CHANGELOG.md  Cargo.toml
toolchains/spidermonkey/src/: jstd_bindings.rs  lib.rs  main.rs
toolchains/v8/: CHANGELOG.md  Cargo.toml
toolchains/v8/src/: lib.rs  main.rs
www/: package.json
www/content/docs/: engines.mdx  getting-started.mdx  index.mdx  package-manager.mdx
www/src/app/: global.css  layout.tsx
www/src/app/(home)/: page.tsx
www/src/lib/: shared.ts
