[workspace]
members = [".", "core", "jstd", "toolchains/javascriptcore", "toolchains/spidermonkey", "toolchains/v8"]

[package]
name = "o-"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
thiserror = "2"
o-core = { path = "core" }
o-toolchain-javascriptcore = {path = "toolchains/javascriptcore"}
o-toolchain-spidermonkey = { path = "toolchains/spidermonkey" }
o-toolchain-v8 = { path = "toolchains/v8" }
toml = "1.1.2"
home = "0.5.12"
reqwest = { version = "0.13.3", features = ["blocking"] }
tempfile = "3.27.0"
zip = "8.6.0"
tar = "0.4.46"
flate2 = "1.1.9"


[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
