[workspace]
members = [".", "core", "jstd", "toolchains/javascriptcore", "toolchains/spidermonkey", "toolchains/v8"]
resolver = "3"

[workspace.package]
version = "0.7.1"
edition = "2024"
license = "WTFPL"
description = "Multi-Engine JavaScript Runtime"
repository = "https://github.com/Synth1105/o-"
homepage = "https://o-docs.vercel.app"
documentation = "https://docs.rs/o-"
readme = "README.md"

[workspace.dependencies]
thiserror = "2"
jstd = { version = "0.7.1", path = "jstd" }
o-core = { version = "0.7.1", path = "core" }
o-toolchain-javascriptcore = { version = "0.7.1", path = "toolchains/javascriptcore" }
o-toolchain-spidermonkey = { version = "0.7.1", path = "toolchains/spidermonkey" }
o-toolchain-v8 = { version = "0.7.1", path = "toolchains/v8" }

[package]
name = "o-"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
thiserror.workspace = true
o-core.workspace = true
toml = "1.1.2"
home = "0.5.12"
reqwest = { version = "0.13.3", features = ["blocking"] }
tempfile = "3.27.0"
zip = "8.6.0"
tar = "0.4.46"
flate2 = "1.1.9"
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
nodejs-semver = "4.2.0"
ssri = "9.2.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
