[package]
name = "o-toolchain-javascriptcore"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/o-toolchain-javascriptcore"
readme.workspace = true

[dependencies]
jstd.workspace = true
o-core.workspace = true
rust_jsc = "0.5.0"
