[package]
name = "o-toolchain-spidermonkey"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/o-toolchain-spidermonkey"
readme.workspace = true

[dependencies]
mozjs = "0.15.14"
jstd.workspace = true
o-core.workspace = true
