[package]
name = "o-toolchain-v8"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/o-toolchain-v8"
readme.workspace = true

[dependencies]
jstd.workspace = true
o-core.workspace = true
rusty_v8 = { package = "v8", version = "149.0.0" }
